# Agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  pyproject.toml  requirements.txt  setup-dev.sh  start.sh  tailwind.config.js
agent/: __init__.py  cli.py  graph.py  llm.py  tools.py
backend/: main.py
backend/agents/: avatar_coordinator.py  intent_router.py  language_detector.py  orchestrator.py  response_synthesizer.py  session_manager.py  stt_agent.py  teaching_agent.py  tts_agent.py
backend/database/: connection.py
backend/models/: schemas.py
backend/utils/: config.py
src/: App.css  App.js
src/components/: AudioRecorder.js  AvatarVideo.js  ChatInterface.js  Header.js  HomeworkInterface.js  MessageBubble.js  QuizInterface.js  Settings.js  Sidebar.js
src/context/: AudioContext.js  SessionContext.js
